# extended-range-arithmetic-cpplib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PerformanceTest-Range-MinusExponent.sh  PerformanceTest-Range-PlusExponent.sh  PerformanceTestParallel-Range-MinusExponent.sh  PerformanceTestParallel-Range-PlusExponent.sh  PerformanceTestSequential-Range-MinusExponent.sh  PerformanceTestSequential-Range-PlusExponent.sh  README.md  Run.sh  Run_1000.sh  Run_large.sh
FloatingExp2Integer/: Dbl.h  Dbl2.h  Dbl3.h  DoubleExp2Int.cpp  DoubleExp2Int.h  DoubleExp2Int.test.cpp  DoubleExp2Int.try.cpp  Float32.try.cpp  Float64.try copy.cpp  Float64.try.cpp  Float64Exp2Int64.cpp  Float64Exp2Int64.h  Float64Exp2Int64.test.cpp  Flt.h  Flt2.h  Int32PosExp2Int32.try.cpp  Int32VsInt64.cpp  Log2Scale.h  Timer.h  exp2.cpp  exp_table.h  try.cpp
FloatingExp2Integer/Float32Exp2Int32/: Float32Exp2Int32.cpp  Float32Exp2Int32.h  Float32Exp2Int32.test.cpp  Float32Exp2Int32.try.cpp
FloatingExp2Integer/Float32PosExp2Int32/: Float32PosExp2Int32.cpp  Float32PosExp2Int32.h  Float32PosExp2Int32.test.cpp  Float32PosExp2Int32.try.cpp
FloatingExp2Integer/Float64Exp2Int64/: Float64Exp2Int64.cpp  Float64Exp2Int64.h  Float64Exp2Int64.test.cpp  Float64Exp2Int64.try.cpp
FloatingExp2Integer/Float64ExtendedExp/: Float64ExtendedExp.cpp  Float64ExtendedExp.h  Float64ExtendedExp.test.cpp
FloatingExp2Integer/Float64LargeRangeNumber/: Float64LargeRangeNumber.cpp  Float64LargeRangeNumber.h
FloatingExp2Integer/Float64PosExp2Int64/: Float64PosExp2Int64.cpp  Float64PosExp2Int64.h  Float64PosExp2Int64.test.cpp  Float64PosExp2Int64.try.cpp
FloatingExp2Integer/FloatExp2Int64/: FloatExp2Int64.cpp  FloatExp2Int64.h  FloatExp2Int64.test.cpp
FloatingExp2Integer/Fukushima/: Fukushima.cpp  Fukushima.h
FloatingExp2Integer/Int32PosExp2Int32/: Int32PosExp2Int32.cpp  Int32PosExp2Int32.h  Int32PosExp2Int32.test.cpp  Int32PosExp2Int32.try.cpp
FloatingExp2Integer/Int64PosExp2Int64/: Int64PosExp2Int64.cpp  Int64PosExp2Int64.h  Int64PosExp2Int64.test.cpp
FloatingExp2Integer/IntExp2Int64/: IntExp2Int64.cpp  IntExp2Int64.h  IntExp2Int64.test.cpp
FloatingExp2Integer/WideRangeNumber64/: WideRangeNumber64.cpp  WideRangeNumber64.h
FloatingExp2Integer/Xnumber/: Xnumber.cpp  Xnumber.h  Xnumber.test.cpp
Python/: logsumexp.py
libmvec_ex/: libmvec_ex.c  libmvec_ex.cpp
logsumexp-torch-test/: logsumexp-torch-test.py
src/: Dbl.h  Dbl2.h  Float64.try.cpp  PerformanceTest-ArraySize.cpp  Timer.h  exp2.cpp
src/extended_range_arithmetic/FloatExp2Int64/: FloatExp2Int64.cpp  FloatExp2Int64.h  FloatExp2Int64.test.cpp
src/extended_range_arithmetic/IntExp2Int64/: IntExp2Int64.cpp  IntExp2Int64.h  IntExp2Int64.test.cpp
src/extended_range_arithmetic/WideRangeNumber64/: WideRangeNumber64.cpp  WideRangeNumber64.h
src/extended_range_arithmetic/Xnumber/: Xnumber.cpp  Xnumber.h
src/extended_range_arithmetic/Xnumber64/: Xnumber64.cpp  Xnumber64.h
